# tstomkv

./: README.md  main.py  pyproject.toml
data/: ffprobe-example.json  stats-output.example
src/tstomkv/: __init__.py  cli.py  ffmpeg.py  files.py  paths.py  recordings.py  shell.py  transcoding.py  tvh.py
tests/: test_config.py  test_ffmpeg.py  test_files.py  test_paths.py  test_recordings.py  test_shell.py  test_tstomkv.py  test_tvh.py
tstomkv/: __init__.py  config.py  ffmpeg.py  files.py  recordings.py  shell.py  tvh.py
