[project]
name = "tstomkv"
version = "0.1.9"
description = "A simple tool to convert TS files to MKV format over the network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fabric>=3.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "types-toml>=0.10.8.20240310",
]
