[project]
name = "tstomkv"
version = "0.2.0"
description = "A simple tool to convert TS files to MKV format over the network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fabric>=3.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "types-toml>=0.10.8.20240310",
]
